src/styles/global.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lora', 'Times New Roman', Times, serif;
    color: #0F0F0F;
}

.homepage-blurb {
    text-align: center;
    max-width: 600px;
    margin: 80px auto 0 auto;
    color: rgba(0, 0, 0, 0.8);
}

